--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="About Olena Vyshyvanyuk,a front-end developer, based in USA">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
@@ -18,12 +19,12 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <title>About Olena Vyshyvanyuk</title>
+    <title>About me-Olena Vyshyvanyuk</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand name" href="index.html">Olena Vyshyvanyuk</a>
+        <a class="navbar-brand name" href="index.html" title="Homepage">Olena Vyshyvanyuk</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -38,15 +39,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="index.html" title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="About Olena Vyshyvanyuk">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="about.html#contact" title="Contact Olena Vyshyvanyuk">Contact me</a>
             </li>
           </ul>
         </div>
@@ -70,25 +71,28 @@
           <img
             src="images/yoga.png"
             class="img-fluid p-2 shadow rounded link-about"
+            alt="Yoga App, project of Olena Vyshyvanyuk"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/weather.png"
             class="img-fluid p-2 shadow rounded link-about"
+            alt="Weather App, project of Olena Vyshyvanyuk"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/yogurt.png"
             class="img-fluid p-2 shadow rounded link-about"
+            alt="Yogurt App, project of Olena Vyshyvanyuk"
           />
         </div>
       </div>
     </div>
     <div id="contact">
       <h2 class="contact">📮 Contact me</h2>
-      <a href="mailto:olenkavhs@gmail.com" class="email-link">
+      <a href="mailto:olenkavhs@gmail.com" class="email-link" title="For hiring questions please contact me by email">
         olenkavhs@gmail.com
       </a>
     </div>
