--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Front-end developer based in USA Olena Vyshyvanyuk, check out my projects and contact me for job inguiries.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Olena Vyshyvanyuk</title>
+    <title>Front-end developer-Olena Vyshyvanyuk</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -21,7 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand name" href="index.html">Olena Vyshyvanyuk</a>
+        <a class="navbar-brand name" href="index.html" title="Homepage">Olena Vyshyvanyuk</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,13 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#"title="Home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html"title="About Olena Vyshyvanyuk" >About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="about.html#contact"title="Contact Olena Vyshyvanyuk">Contact me</a>
             </li>
           </ul>
         </div>
@@ -53,15 +54,15 @@
       <h1>Olena Vyshyvanyuk</h1>
       <h3>🇺🇦 Front-end developer, based in Birmingham, USA</h3>
       <div class="navigation-links">
-        <a href="about.html#contact" class="contact-link">Contact me</a>
-        <a href="about.html" class="about-link">About me</a>
+        <a href="about.html#contact" class="contact-link" title="Contact Olena Vyshyvanyuk by email">Contact me</a>
+        <a href="about.html" class="about-link" title="Information about Olena Vyshyvanyuk">About me</a>
       </div>
     </div>
 
     <div class="container text-center">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded img-yoga" />
+          <img src="images/yoga.png" class="img-fluid rounded img-yoga img-page" alt="Yoga-project of Olena Vyshyvanyuk " />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -72,7 +73,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Yoga-project of Olena Vyshyvanyuk">Launch Yoga App</a>
           </div>
         </div>
         <div class="row mt-5">
@@ -85,19 +86,20 @@
               minima fugiat explicabo eum dolore.
             </p>
             <div class="mb-6 mt-5">
-              <a href="#" class="primary-link">Launch Weather App</a>
+              <a href="#" class="primary-link" title="Weather App project of Olena Vyshyvanyuk">Launch Weather App</a>
             </div>
           </div>
             <div class="col-md-6">
               <img
                 src="images/weather.png"
-                class="img-fluid rounded "
+                class="img-fluid rounded img-page "
+                alt="Weather App project of Olena Vyshyvanyuk"
               />
             </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
-                  <img src="images/yogurt.png" class="img-fluid rounded" />
+                  <img src="images/yogurt.png" class="img-fluid rounded img-page" alt="Yogurt-project of Olena Vyshyvanyuk" />
                 </div>
                 <div class="col-md-6">
                   <h2 class="mb-3">Yogurt app</h2>
@@ -108,7 +110,7 @@
                     explicabo eum dolore.
                   </p>
                   <div class="mt-5">
-                    <a href="#" class="primary-link">Launch Yogurt App</a>
+                    <a href="#" class="primary-link" title="Yogurt App-project of Olena Vyshyvanyuk">Launch Yogurt App</a>
                   </div>
                 </div>
           </div>
